--- a/test/browser-test.html
+++ b/test/browser-test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="../lib/index.js"></script>
+<script src="../lib/genex.js"></script>
 <meta charset="utf-8">
 <style>
 
