--- a/test/browser-test.html
+++ b/test/browser-test.html
@@ -37,7 +37,7 @@ input {
   <input type="text" value="" pattern="[0-9a-fA-F]{32}" />
   <br />
 
-  <button type="submit">Validate the inputs.</button>
+  <button type="submit">Validate the inputs</button>
 </form>
 <script>
 /*
